// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton Renders 1`] = `
Array [
  <button
    class="sc-bczRLJ eWIwMV"
  >
    Text
  </button>,
]
`;

exports[`LinkButton Renders primary 1`] = `
Array [
  <button
    class="sc-bczRLJ jpJgZD"
  >
    Text
  </button>,
]
`;

exports[`LinkButton Renders secondary 1`] = `
Array [
  <button
    class="sc-bczRLJ eWIwMV"
  >
    Text
  </button>,
]
`;
